Bug 422682 - "Show in Activities" item is missing in window menu
Summary: "Show in Activities" item is missing in window menu
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: activities (other bugs)
Version First Reported In: 5.19.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Ivan Čukić
URL:
Keywords:
: 464130 473216 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-06-09 16:56 UTC by gudvinr+kde
Modified: 2023-11-01 20:01 UTC (History)
13 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.27.9
Sentry Crash Report:
gudvinr+kde: X11+
gudvinr+kde: Usability+


Attachments
single firefox window across all activities (4.83 KB, image/png)
2023-05-23 14:29 UTC, gudvinr+kde
Details
no activity selector (22.90 KB, image/png)
2023-05-23 14:30 UTC, gudvinr+kde
Details
firefox widow spread across activities (3.15 KB, image/png)
2023-07-28 11:13 UTC, gudvinr+kde
Details
Alt+F3 (17.31 KB, image/png)
2023-09-20 17:39 UTC, gudvinr+kde
Details

Note You need to log in before you can comment on or make changes to this bug.
Description gudvinr+kde 2020-06-09 16:56:04 UTC
SUMMARY

You should be able to move window between activities using Alt+F3 > "Show in Activities" but with plasma 5.19 this menu is missing so you can't do that anymore which has severe impact on activity usage

STEPS TO REPRODUCE
1. Update to plasma 5.19

OBSERVED RESULT
Can't switch window between activities using Alt+F3 menu.

EXPECTED RESULT
Having "Show in Activities" submenu in Alt+F3 menu.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 5.19.0
KDE Frameworks Version: 5.70.0
Qt Version: 5.15.0
Kernel Version: 5.4.45-1-lts
OS Type: 64-bit
Comment 1 Ivan Čukić 2020-06-09 17:12:39 UTC
I'd say this is a problem with Arch packages as that feature has not been removed - I use it on a daily basis.

Also, there is a nicer way to move windows accross activities now - you can drag and drop tasks from the task bar onto the activitty switcher https://pointieststick.files.wordpress.com/2020/05/screenshot_20200512_155226.png
Comment 2 gudvinr+kde 2020-07-19 11:41:15 UTC
(In reply to Ivan Čukić from comment #1)
> I'd say this is a problem with Arch packages as that feature has not been
> removed - I use it on a daily basis.

It is not reproducible so I can't really say what exacly caused this particular issue.

I think this issue can be closed.
Comment 3 robin 2020-07-23 07:55:57 UTC
I am experiencing the same problem. Applications i am opening are not assigned to the current activity, but show up in all activities. This indeed makes activities pretty much useless.

I also don't see the menu "Show in activities" anymore.

Does anyone maybe has a solution or a respective Arch bug regarding this? I already searched but found nothing.

Operating System: Manjaro Linux
KDE Plasma Version: 5.19.3
KDE Frameworks Version: 5.72.0
Qt Version: 5.15.0
Kernel Version: 5.7.9-1-MANJARO
OS Type: 64-bit
Processors: 4 × Intel® Core™ i7-5500U CPU @ 2.40GHz
Memory: 7.7 GiB of RAM
Graphics Processor: Mesa Intel® HD Graphics 5500
Comment 4 gudvinr+kde 2020-11-19 16:49:51 UTC
(In reply to robin from comment #3)
> Does anyone maybe has a solution or a respective Arch bug regarding this? I
> already searched but found nothing.

In my case it was fixed after reboot, IIRC. But if yours is not showing consistently then it is probablt arch (or rather manjaro) issue.
Comment 5 Jose Couto 2021-01-12 09:31:39 UTC
I am experiencing the same problem on my laptop, with another Linux distro and on a newer version of Plasma:

Operating System: Debian GNU/Linux (unstable/sid)
KDE Plasma Version: 5.20.5
KDE Frameworks Version: 5.77.0
Qt Version: 5.15.2
Kernel Version: 5.10.0-1-amd64
OS Type: 64-bit
Processors: 8 × Intel® Core™ i5-8250U CPU @ 1.60GHz
Memory: 15,5 GiB of RAM
Graphics Processor: Mesa Intel® UHD Graphics 620

I don't see any error in .xsession-errors related to this, and the activity manager is working fine. Reboots don't solve the problem.

Thanks for your help.
Comment 6 Ivan Čukić 2021-01-12 11:07:17 UTC
Is it possible that kwin on arch is compiled without development headers of kactivities?
Comment 7 Jose Couto 2021-01-12 14:33:06 UTC
(In reply to Ivan Čukić from comment #6)
> Is it possible that kwin on arch is compiled without development headers of
> kactivities?

I don't know if this is the case for debian. I'm opening a bug for them.

Thanks for your help.
Comment 8 Aurélien COUDERC 2021-01-12 16:01:05 UTC
Hi there,

kwin is definitely compiled with the kactivities headers.
See :
https://salsa.debian.org/qt-kde-team/kde/kwin/-/blob/debian/4%255.20.5-1/debian/control#L29

and the build logs say :
-- The following features have been enabled:

 * Qt5Test (required version >= 5.15.0), Required for building tests
   Required for tests
 * KF5Activities (required version >= 5.74), Enable building of KWin with kactivities support
   Enable building of KWin with kactivities support

https://buildd.debian.org/status/fetch.php?pkg=kwin&arch=amd64&ver=4%3A5.20.5-1&stamp=1609953607&raw=0

Also I cannot reproduce the issue myself neither on 5.19.x or 5.20.x in Debian, on at least 2 different machines, the activities menu works, and I make daily use of the activities and activites switching.
So I’m not sure what leads to this but there must be some more specific condition to trigger the bug.


Happy hacking,
--
Aurélien
Comment 9 Aurélien COUDERC 2021-01-12 16:09:33 UTC
For the sake of completeness please note that we have 2 patches on top of 5.20.5 :
https://salsa.debian.org/qt-kde-team/kde/kwin/-/tree/debian/4%255.20.5-1/debian/patches

- a backport of 5.21’s [kcmkwin/kwinscreenedges] Disable left touch edge by default 
https://invent.kde.org/plasma/kwin/commit/3df7985570c748cc47362de9bbae0eb580f8f839

- a oneliner for a uninitialized variable which doesn’t seem that we have pushed upstream and would probably make sense to do so:
https://salsa.debian.org/qt-kde-team/kde/kwin/-/blob/debian/4%255.20.5-1/debian/patches/uninitialized-yuvformat.patch
Input welcome on this.
Comment 10 Jose Couto 2021-01-12 17:45:30 UTC
The menu entry has come back after trying Plasma on an new user. Thank you anyway and best regards.
Comment 11 Ivan Čukić 2021-01-13 13:32:49 UTC
Hm, I don't like that it is ok with a clean user. Means that some setting in kwin can hide this. If you figure out what was the problem or how to reproduce, please report.
Comment 12 Erin of Yukis 2021-04-08 18:47:47 UTC
Is this supposed to work on Wayland too? Cause I see this exact behaviour even after creating a clean user for testing.
Comment 13 Ivan Čukić 2021-04-08 19:38:14 UTC
KWin/Wayland does not still have the activities support as far as I know.
Comment 14 Erin of Yukis 2021-04-09 12:48:52 UTC
:-( Figured that be why it doesn't work over here.
Do you know any issue I can subscribe to? I search but didn't find any.
Comment 15 gudvinr+kde 2021-07-31 13:25:53 UTC
It happened again! I don't see this submenu after login on windows.

Operating System: Arch Linux
KDE Plasma Version: 5.22.4
KDE Frameworks Version: 5.84.0
Qt Version: 5.15.2
Kernel Version: 5.13.6-arch1-1 (64-bit)
Graphics Platform: X11
Comment 16 gudvinr+kde 2021-07-31 13:27:46 UTC
(In reply to gudvinr from comment #15)
> It happened again! I don't see this submenu after login on windows.

To clarify: not "on Windows OS" but "on windows in Plasma Desktop"
Comment 17 Paul Worrall 2021-12-05 09:58:39 UTC
I have also been seeing this issue for several months now on KDE Neon User Edition:

In about 25% of logins (following a fresh power-up), the "Show in Activities" menu option is not shown.  

The activity switcher still shows the activities and allows switching between them.  

All windows are shown on all activities.

Operating System: KDE neon 5.23
KDE Plasma Version: 5.23.3
KDE Frameworks Version: 5.88.0
Qt Version: 5.15.3
Kernel Version: 5.11.0-41-generic (64-bit)
Graphics Platform: X11
Processors: 2 × AMD A6-6400K APU with Radeon(tm) HD Graphics
Memory: 7.7 GiB of RAM
Graphics Processor: AMD CEDAR
Comment 18 Nate Graham 2023-04-10 03:02:08 UTC
This has been added as of at least Plasma 5.27.4, possibly earlier too.
Comment 19 gudvinr+kde 2023-05-16 11:51:40 UTC
It is marked as fixed but it doesn't seem to be fixed and there's no linked commits there.

In fact, I am now experiencing this behaviour much more often than I had back when I reported this issue.
Comment 20 Nate Graham 2023-05-16 14:11:56 UTC
Please mention your Plasma version and attach a screenshot showing the issue.
Comment 21 gudvinr+kde 2023-05-23 14:29:43 UTC
Created attachment 159200 [details]
single firefox window across all activities
Comment 22 gudvinr+kde 2023-05-23 14:30:01 UTC
Created attachment 159201 [details]
no activity selector
Comment 23 gudvinr+kde 2023-05-23 14:31:44 UTC
Here it is, I got this recently

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 5.27.5
KDE Frameworks Version: 5.106.0
Qt Version: 5.15.9
Kernel Version: 6.1.29-1-lts (64-bit)
Graphics Platform: X11
Graphics Processor: AMD Radeon RX Vega M GL Graphics
Comment 24 gudvinr+kde 2023-07-28 11:13:38 UTC
Created attachment 160581 [details]
firefox widow spread across activities

It is not fixed
Comment 25 gudvinr+kde 2023-07-28 11:14:38 UTC
Operating System: Arch Linux 
KDE Plasma Version: 5.27.6
KDE Frameworks Version: 5.108.0
Qt Version: 5.15.10
Kernel Version: 6.1.39-1-lts (64-bit)
Graphics Platform: X11
Graphics Processor: AMD Radeon RX Vega M GL Graphics
Comment 26 Nate Graham 2023-07-28 20:57:31 UTC
Please attach a screenshot that shows it being missing. Thanks!
Comment 27 gudvinr+kde 2023-07-31 11:46:11 UTC
I can't attach screenshot until I get a bug again but it's exactly the same as first one (attachment 159201 [details]). Really, no difference at all.

I did verify that it is, in fact, missing. But it's quite challenging to make a screenshot of popup windows because hotkeys don't quite work while it's open.

When this happens, activity handling basically does not exist at all. You see all windows in all activities (as shown in activity preview window) and you can't move windows between activities (because activity switch menu is also missing).

I don't see any weird logs (like activity manager crashing or something like that) so it's quite hard to debug that further considering that this isn't reproducible.
Comment 28 Bug Janitor Service 2023-08-15 03:45:14 UTC
Dear Bug Submitter,

This bug has been in NEEDSINFO status with no change for at least
15 days. Please provide the requested information as soon as
possible and set the bug status as REPORTED. Due to regular bug
tracker maintenance, if the bug is still in NEEDSINFO status with
no change in 30 days the bug will be closed as RESOLVED > WORKSFORME
due to lack of needed information.

For more information about our bug triaging procedures please read the
wiki located here:
https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging

If you have already provided the requested information, please
mark the bug as REPORTED so that the KDE team knows that the bug is
ready to be confirmed.

Thank you for helping us make KDE software even better for everyone!
Comment 29 gudvinr+kde 2023-08-15 12:58:28 UTC
I haven't seen any relevant changes in 5.27.7 (https://kde.org/announcements/changelogs/plasma/5/5.27.6-5.27.7/) and I had this issue as of 5.27.6.

I can't provide any more information other than I already did because there is none. You just can't work with activities and essentially windows exist on all activities and you can't switch between them.
But activity pager does show 4 activities. You can switch between activities, task manager widget has correct launchers for all activities. When you start new app, it also starts on all 4 activities (although I have a feeling that apps start without ties to any activity and it just looks like they show up on all as a consequence).
Comment 30 joelsonejr 2023-08-16 14:25:53 UTC
I've had the exact same problem as the OP, in a recent KDE release. 
Below there is a the output of journalctl, when the error happens. The details are below. 

It looks like we had more than enough reports for this issue to be marked as Confirmed. 

SUMMARY
As soon as  I boot the computer, the Activities are not working on a isolate manner. When I switch activity, the desktop wallpaper changes, but the windows follow along. For example, if I have a window opened in activity A, and I switch to activity B, the window is still presented in the other activity. 
Also, in the context menu for the window title bar (right click on title bar) the option "Show in Activities" is missing. 

As a workaround I've to log out/ log in or restart kwin. 
When that error happens, I can get the following log from joernalctl -f (the error is on the last line):

❯ journalctl -f
ago 09 10:02:15 deckro xdg-desktop-portal-kde[1284]: xdp-kde-settings: Key  "font"  doesn't exist
ago 09 10:02:15 deckro xdg-desktop-portal-kde[1284]: xdp-kde-settings: Key  "activeFont"  doesn't exist
ago 09 10:02:15 deckro xdg-desktop-portal-kde[1284]: xdp-kde-settings: Key  "toolBarFont"  doesn't exist
ago 09 10:02:15 deckro xdg-desktop-portal-kde[1284]: xdp-kde-settings: Key  "smallestReadableFont"  doesn't exist
ago 09 10:02:31 deckro plasmashell[1242]: Could not find the Plasmoid for Plasma::FrameSvgItem(0x563046d9b400) QQmlContext(0x5630471100e0) QUrl("file:///usr/share/plasma/plasmoids/org.kde.plasma.notifications/contents/ui/global/Globals.qml")
ago 09 10:02:31 deckro plasmashell[1242]: Could not find the Plasmoid for Plasma::FrameSvgItem(0x563046d9b400) QQmlContext(0x5630471100e0) QUrl("file:///usr/share/plasma/plasmoids/org.kde.plasma.notifications/contents/ui/global/Globals.qml")
ago 09 10:02:31 deckro flatpak[1567]: flameshot: info: Capture saved to clipboard.
ago 09 10:02:31 deckro systemd[1108]: app-flatpak-org.flameshot.Flameshot-2778.scope: Consumed 1.283s CPU time.
ago 09 10:02:36 deckro kwin_x11[1202]: kwin_core: XCB error: 152 (BadDamage), sequence: 40781, resource id: 16784681, major code: 143 (DAMAGE), minor code: 3 (Subtract)


It doesn't happen all the time, so I'm still unable to determine what is the probable  cause of it. 


STEPS TO REPRODUCE
1.  Cold boot the system, and login normally. 
2. Have at least two activities set up. 
3. Open any window
4. Switch activity (using activity switcher, keyboard shortcut, or any other way)


OBSERVED RESULT
The wallpaper changes (if they are setup per activity) , the activity switcher (if enabled) indicates that the activity changed, but the windows get carried along. As if  the window was set up to show in all activities. 
Also, the window title bar "Show in activities" context menu is not displayed. 

EXPECTED RESULT
The window is only displayed in it's original activity, and the windows title bar context menu "Show in activities" item is available. 

SOFTWARE/OS VERSIONS
OS: Manjaro Linux x86_64
Kernel: 6.1.41-1-MANJARO
Shell: zsh 5.9
Resolution: 2560x1440, 1920x1080
DE: Plasma 5.27.6
WM: KWin
WM Theme: Oxygen
Theme: [Plasma], Adwaita-dark [GTK2/3]
CPU: Intel i7 4790H
GPU: AMD ATI Radeon 6600
Memory: 32043MiB
Comment 31 joelsonejr 2023-08-16 14:27:17 UTC
*** Bug 473216 has been marked as a duplicate of this bug. ***
Comment 32 joelsonejr 2023-08-26 13:50:49 UTC
I also noticed that when I'm able to make Activities work again, all per activity settings are lost, and they are reset to default. 
For example the icons size, background image, activity specific panel icons, activity specific desktop icons are all gone.
Comment 33 gudvinr+kde 2023-09-20 17:39:53 UTC
Created attachment 161756 [details]
Alt+F3

Operating System: Arch Linux 
KDE Plasma Version: 5.27.8
KDE Frameworks Version: 5.110.0
Qt Version: 5.15.10
Kernel Version: 6.1.54-1-lts (64-bit)
Graphics Platform: X11
Comment 34 David Edmundson 2023-10-10 14:21:32 UTC
Easier steps to reproduce:
 - killall kactivitymanagerd
 - the menu stays gone even when kactivitymanagerd comes back
Comment 35 David Edmundson 2023-10-16 15:26:13 UTC
*** Bug 464130 has been marked as a duplicate of this bug. ***
Comment 36 fanzhuyifan 2023-10-16 15:43:34 UTC
(In reply to David Edmundson from comment #35)
> *** Bug 464130 has been marked as a duplicate of this bug. ***

Bug 464129 was marked as a duplicate of Bug 464130. Should it now be marked as a duplicate of this bug?
Comment 37 Bug Janitor Service 2023-10-17 11:46:02 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kactivitymanagerd/-/merge_requests/60
Comment 38 David Edmundson 2023-10-21 22:19:04 UTC
Git commit 3cbd1b7b0fda5aa57411956c0cec0074163a4a8e by David Edmundson.
Committed on 22/10/2023 at 00:17.
Pushed by davidedmundson into branch 'master'.

Avoid race condition on startup

The activities list needs to be loaded at the time the first DBus call
is processed. Otherwise kamd will return an empty list.

updateSortedActivityList was queued as it needs to run after some other
code in the main KAMD constructor, but this was racey as we could get
DBus traffic in the meantime.

This was relatively easy to hit as this is not in the main thread where
the connection is registered and there is a blocking DBus call in the
Activies constructor.

M  +1    -2    src/service/Activities.cpp

https://invent.kde.org/plasma/kactivitymanagerd/-/commit/3cbd1b7b0fda5aa57411956c0cec0074163a4a8e
Comment 39 David Edmundson 2023-10-21 22:21:36 UTC
Git commit 7353a1046c1a233cb91617fe3e25a3450a6824c4 by David Edmundson.
Committed on 22/10/2023 at 00:20.
Pushed by davidedmundson into branch 'Plasma/5.27'.

Avoid race condition on startup

The activities list needs to be loaded at the time the first DBus call
is processed. Otherwise kamd will return an empty list.

updateSortedActivityList was queued as it needs to run after some other
code in the main KAMD constructor, but this was racey as we could get
DBus traffic in the meantime.

This was relatively easy to hit as this is not in the main thread where
the connection is registered and there is a blocking DBus call in the
Activies constructor.


(cherry picked from commit 3cbd1b7b0fda5aa57411956c0cec0074163a4a8e)

M  +1    -2    src/service/Activities.cpp

https://invent.kde.org/plasma/kactivitymanagerd/-/commit/7353a1046c1a233cb91617fe3e25a3450a6824c4
Comment 40 SP 2023-11-01 18:43:27 UTC
(In reply to David Edmundson from comment #39)
> Git commit 7353a1046c1a233cb91617fe3e25a3450a6824c4 by David Edmundson.
> Committed on 22/10/2023 at 00:20.
> Pushed by davidedmundson into branch 'Plasma/5.27'.
> 
> Avoid race condition on startup
> 
> The activities list needs to be loaded at the time the first DBus call
> is processed. Otherwise kamd will return an empty list.
> 
> updateSortedActivityList was queued as it needs to run after some other
> code in the main KAMD constructor, but this was racey as we could get
> DBus traffic in the meantime.
> 
> This was relatively easy to hit as this is not in the main thread where
> the connection is registered and there is a blocking DBus call in the
> Activies constructor.
> 
> 
> (cherry picked from commit 3cbd1b7b0fda5aa57411956c0cec0074163a4a8e)
> 
> M  +1    -2    src/service/Activities.cpp
> 
> https://invent.kde.org/plasma/kactivitymanagerd/-/commit/
> 7353a1046c1a233cb91617fe3e25a3450a6824c4

When will this be moved to stable updates?  I still have this problem of Activities being absent from the Titlebar of open windows and duplicate windows on every Activity. The problem is only on Wayland - not on X11 which I have not use for a long while.
Operating System: Fedora Linux 38
KDE Plasma Version: 5.27.8
KDE Frameworks Version: 5.110.0
Qt Version: 5.15.10
Kernel Version: 6.5.8-200.fc38.x86_64 (64-bit)
Graphics Platform: Wayland
Comment 41 gudvinr+kde 2023-11-01 18:48:42 UTC
(In reply to SP from comment #40)

> KDE Plasma Version: 5.27.8

5.27.8 released in September, fix for that issue didn't exist back then.
Comment 42 SP 2023-11-01 20:01:40 UTC
(In reply to gudvinr+kde from comment #41)
> (In reply to SP from comment #40)
> 
> > KDE Plasma Version: 5.27.8
> 
> 5.27.8 released in September, fix for that issue didn't exist back then.

Agreed.  My question was when will it be available in stable updates.  Do we have to way for 5.27.9?